G/tests/fail/print_multi.g
fn main() -> int {
    println(1, 2)
    return 0
}
